добавил функции в бэке
