# back/internal/model/channel.go
@@ -1,6 +1,9 @@
 package model
 
 type ChannelsInfo struct {
-	Url        string
-	CountViews int64
+	Url             string
+	CountViews      int64
+	CountDayViews   *int64
+	CountMonthViews *int64
+	CountWeekViews  *int64
 }
